add_library(app
  app/App.cpp
  ast/BinaryExprAST.cpp
  ast/CallExprAST.cpp
  ast/FunctionAST.cpp
  ast/NumberExprAST.cpp
  ast/PrototypeAST.cpp
  ast/VariableExprAST.cpp
  lexer/Lexer.cpp
  parser/Parser.cpp
  visitor/PrintVisitor.cpp
  visitor/CodegenVisitor.cpp
)

target_include_directories(app PUBLIC
  ${CMAKE_SOURCE_DIR}/include/lexer
  ${CMAKE_SOURCE_DIR}/include/app
  ${CMAKE_SOURCE_DIR}/include/ast
  ${CMAKE_SOURCE_DIR}/include/parser
  ${CMAKE_SOURCE_DIR}/include/visitor
)

set(LLVM_DIR /opt/homebrew/opt/llvm/lib/cmake/llvm)
find_package(LLVM REQUIRED CONFIG)

include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})

add_executable(tslang
  main.cpp
)

llvm_map_components_to_libnames(llvm_libs 
  aarch64asmparser
  aarch64codegen
  aarch64desc
  aarch64disassembler
  aarch64info
  aarch64utils
  aggressiveinstcombine
  amdgpuasmparser
  amdgpucodegen
  amdgpudesc
  amdgpudisassembler
  amdgpuinfo
  amdgputargetmca
  amdgpuutils
  analysis
  armasmparser
  armcodegen
  armdesc
  armdisassembler
  arminfo
  armutils
  asmparser
  asmprinter
  avrasmparser
  avrcodegen
  avrdesc
  avrdisassembler
  avrinfo
  binaryformat
  bitreader
  bitstreamreader
  bitwriter
  bpfasmparser
  bpfcodegen
  bpfdesc
  bpfdisassembler
  bpfinfo
  cfguard
  codegen
  codegentypes
  core
  coroutines
  coverage
  debuginfobtf
  debuginfocodeview
  debuginfodwarf
  debuginfogsym
  debuginfologicalview
  debuginfomsf
  debuginfopdb
  demangle
  dlltooldriver
  dwarflinker
  dwarflinkerclassic
  dwarflinkerparallel
  dwp
  executionengine
  extensions
  filecheck
  frontenddriver
  frontendhlsl
  frontendoffloading
  frontendopenacc
  frontendopenmp
  fuzzercli
  fuzzmutate
  globalisel
  hexagonasmparser
  hexagoncodegen
  hexagondesc
  hexagondisassembler
  hexagoninfo
  hipstdpar
  instcombine
  instrumentation
  interfacestub
  interpreter
  ipo
  irprinter
  irreader
  lanaiasmparser
  lanaicodegen
  lanaidesc
  lanaidisassembler
  lanaiinfo
  libdriver
  lineeditor
  linker
  loongarchasmparser
  loongarchcodegen
  loongarchdesc
  loongarchdisassembler
  loongarchinfo
  lto
  mc
  mca
  mcdisassembler
  mcparser
  mipsasmparser
  mipscodegen
  mipsdesc
  mipsdisassembler
  mipsinfo
  mirparser
  msp430asmparser
  msp430codegen
  msp430desc
  msp430disassembler
  msp430info
  native
  nativecodegen
  nvptxcodegen
  nvptxdesc
  nvptxinfo
  objcarcopts
  objcopy
  object
  objectyaml
  option
  orcdebugging
  orcshared
  orctargetprocess
  passes
  powerpcasmparser
  powerpccodegen
  powerpcdesc
  powerpcdisassembler
  powerpcinfo
  profiledata
  remarks
  riscvasmparser
  riscvcodegen
  riscvdesc
  riscvdisassembler
  riscvinfo
  riscvtargetmca
  runtimedyld
  scalaropts
  selectiondag
  sparcasmparser
  sparccodegen
  sparcdesc
  sparcdisassembler
  sparcinfo
  support
  symbolize
  systemzasmparser
  systemzcodegen
  systemzdesc
  systemzdisassembler
  systemzinfo
  tablegen
  target
  targetparser
  textapi
  textapibinaryreader
  transformutils
  veasmparser
  vecodegen
  vectorize
  vedesc
  vedisassembler
  veinfo
  webassemblyasmparser
  webassemblycodegen
  webassemblydesc
  webassemblydisassembler
  webassemblyinfo
  webassemblyutils
  windowsdriver
  windowsmanifest
  x86asmparser
  x86codegen
  x86desc
  x86disassembler
  x86info
  x86targetmca
  xcorecodegen
  xcoredesc
  xcoredisassembler
  xcoreinfo
  xray
)

target_link_libraries(tslang
  app
  ${llvm_libs}
)
